[package]
name = "wicket"
description = "wicket (a QUIC/WT proxy)"
authors = ["Mike English"]
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
url = "2.4.1"
quinn = "0.10"
webtransport-quinn = "0.6"
tokio = { version = "1", features = ["full"] }
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
